Replaced std::numbers::pi with M_PI because not yet all compilers support the former

--- a/.github/workflows/BuildDontRunWithoutCMakePresets.yml
+++ b/.github/workflows/BuildDontRunWithoutCMakePresets.yml
@@ -30,7 +30,7 @@ jobs:
           - name: "Unix Makefiles"
             buildDir: buildMake
           - name: "NMake Makefiles"
-            buildDir: buildMake
+            buildDir: buildNMake
 
         exclude:
           - os: ubuntu-latest
